--- a/.envrc
+++ b/.envrc
@@ -2,6 +2,8 @@
 #set -u 
 #set -x 
 
+MINIKUBE_INCLUDED=true 
+
 CFSSL_VERSION=R1.2
 KUBERNETES_RELEASE=v1.13.0
 KUBEBOX_VERSION=v0.4.0
@@ -9,6 +11,12 @@ KUBETAIL_VERSION=1.6.7
 KUBECTX_VERSION=v0.6.3
 KUBENS_VERSION=v0.6.3
 KUBESPY_VERSION=v0.4.0
+MINIKUBE_VERSION=v0.30.0
+
+# Minikube configuration
+MINIKUBE_HOME=${PWD}/.minikube
+MINIKUBE_IN_STYLE=false
+MINIKUBE_ENABLE_PROFILING=0
 
 # default kubeconfig location
 export KUBECONFIG=${HOME}/.kube/config
@@ -18,7 +26,7 @@ mkdir -p ${PWD}/bin
 
 # download cfssl tools if does not exist
 function download_cfssl {
-  	if [ ! -f bin/cfssl ] 
+  	if [ ! -f ${PWD}/bin/cfssl ] 
 	then
 	  	curl -sLo ${PWD}/bin/cfssl https://pkg.cfssl.org/${CFSSL_VERSION}/cfssl_linux-amd64 
   		chmod +x ${PWD}/bin/cfssl
@@ -27,7 +35,7 @@ function download_cfssl {
 
  # download cfssljson if does not exist
 function download_cfssljson {
-  	if [ ! -f bin/cfssljson ]
+  	if [ ! -f ${PWD}/bin/cfssljson ]
   	then 
   		curl -sLo ${PWD}/bin/cfssljson https://pkg.cfssl.org/${CFSSL_VERSION}/cfssljson_linux-amd64
 		chmod +x ${PWD}/bin/cfssljson
@@ -36,7 +44,7 @@ function download_cfssljson {
 
 # download kubectl if does not exist
 function download_kubectl {
-	if [ ! -f bin/kubectl ]
+	if [ ! -f ${PWD}/bin/kubectl ]
 	then
 		curl -sLo ${PWD}/bin/kubectl https://storage.googleapis.com/kubernetes-release/release/${KUBERNETES_RELEASE}/bin/linux/amd64/kubectl
 		chmod +x ${PWD}/bin/kubectl
@@ -45,7 +53,7 @@ function download_kubectl {
 
 # download kubebox if does not exist
 function download_kubebox {
-	if [ ! -f bin/kubebox ]
+	if [ ! -f ${PWD}/bin/kubebox ]
 	then
 		curl -sLo ${PWD}/bin/kubebox https://github.com/astefanutti/kubebox/releases/download/${KUBEBOX_VERSION}/kubebox-linux
 		chmod +x ${PWD}/bin/kubebox
@@ -54,7 +62,7 @@ function download_kubebox {
 
 # download kubetail if does not exist
 function download_kubetail {
-	if [ ! -f bin/kubetail ]
+	if [ ! -f ${PWD}/bin/kubetail ]
 	then
 		curl -sLo ${PWD}/bin/kubetail https://raw.githubusercontent.com/johanhaleby/kubetail/${KUBETAIL_VERSION}/kubetail
 		chmod +x ${PWD}/bin/kubetail
@@ -63,7 +71,7 @@ function download_kubetail {
 
 # download kubectx if does not exist
 function download_kubectx {
-	if [ ! -f bin/kubectx ]
+	if [ ! -f ${PWD}/bin/kubectx ]
 	then
 		curl -sLo ${PWD}/bin/kubectx https://raw.githubusercontent.com/ahmetb/kubectx/${KUBECTX_VERSION}/kubectx
 		chmod +x ${PWD}/bin/kubectx
@@ -72,7 +80,7 @@ function download_kubectx {
 
 # download kubens if does not exist
 function download_kubens {
-	if [ ! -f bin/kubens ]
+	if [ ! -f ${PWD}/bin/kubens ]
 	then
 		curl -sLo ${PWD}/bin/kubens https://raw.githubusercontent.com/ahmetb/kubectx/${KUBENS_VERSION}/kubens
 		chmod +x ${PWD}/bin/kubens
@@ -81,16 +89,25 @@ function download_kubens {
 
 # download kubespy if does not exist
 function download_kubespy {
-	if [ ! -f bin/kubespy ]
+	if [ ! -f ${PWD}/bin/kubespy ]
 	then
 		curl -sL https://github.com/pulumi/kubespy/releases/download/${KUBESPY_VERSION}/kubespy-linux-amd64.tar.gz | tar xz --strip-components=2 -C ${PWD}/bin
-		mv releases/kubespy-linux-amd64/kubespy ${PWD}bin/kubespy && rm -rf releases/ 
 		chmod +x ${PWD}/bin/kubespy
 	fi
 }
 
+# download kubespy if does not exist
+function download_minikube {
+	if [ ! -f ${PWD}/bin/minikube ]
+	then
+		curl -sLo ${PWD}/bin/minikube https://storage.googleapis.com/minikube/releases/${MINIKUBE_VERSION}/minikube-linux-amd64
+		chmod +x ${PWD}/bin/minikube
+	fi
+}
+
+
 case "$OSTYPE" in
-  linux*)   
+  linux*)
   	download_cfssl
   	download_cfssljson
   	download_kubectl
@@ -99,6 +116,11 @@ case "$OSTYPE" in
   	download_kubectx
   	download_kubens
   	download_kubespy
+	
+	if [ ${MINIKUBE_INCLUDED} ]
+	then
+    	download_minikube
+	fi   
   	;;
   *) 
   	echo "unsupported OS : $OSTYPE" 
