upgrade minikube to v1.0.0

--- a/.envrc
+++ b/.envrc
@@ -3,6 +3,7 @@
 #set -x 
 
 MINIKUBE_INCLUDED=true 
+MINISHIFT_INCLUDED=true
 
 CFSSL_VERSION=R1.2
 KUBERNETES_RELEASE=v1.13.0
@@ -11,7 +12,7 @@ KUBETAIL_VERSION=1.6.7
 KUBECTX_VERSION=v0.6.3
 KUBENS_VERSION=v0.6.3
 KUBESPY_VERSION=v0.4.0
-MINIKUBE_VERSION=v0.30.0
+MINIKUBE_VERSION=v1.0.0
 
 # Minikube configuration
 MINIKUBE_HOME=${PWD}/.minikube
@@ -96,7 +97,7 @@ function download_kubespy {
 	fi
 }
 
-# download kubespy if does not exist
+# download minikube if does not exist
 function download_minikube {
 	if [ ! -f ${PWD}/bin/minikube ]
 	then
