include minishift and fix boolean evalation bug

--- a/.envrc
+++ b/.envrc
@@ -2,8 +2,8 @@
 #set -u 
 #set -x 
 
-MINIKUBE_INCLUDED=true 
-MINISHIFT_INCLUDED=true
+MINIKUBE_INCLUDED=true
+MINISHIFT_INCLUDED=false
 
 CFSSL_VERSION=R1.2
 KUBERNETES_RELEASE=v1.13.0
@@ -13,6 +13,7 @@ KUBECTX_VERSION=v0.6.3
 KUBENS_VERSION=v0.6.3
 KUBESPY_VERSION=v0.4.0
 MINIKUBE_VERSION=v1.0.0
+MINISHIFT_VERSION=v1.33.0
 
 # Minikube configuration
 MINIKUBE_HOME=${PWD}/.minikube
@@ -106,6 +107,18 @@ function download_minikube {
 	fi
 }
 
+# download minishift if does not exist
+function download_minishift {
+	if [ ! -f ${PWD}/bin/minishift ]
+	then
+		curl -sL https://github.com/minishift/minishift/releases/download/${MINISHIFT_VERSION}/minishift-${MINISHIFT_VERSION:1}-linux-amd64.tgz | tar xz -C ${PWD}/bin minishift-${MINISHIFT_VERSION:1}-linux-amd64/minishift
+		ls
+		mv ${PWD}/bin/minishift-${MINISHIFT_VERSION:1}-linux-amd64/minishift ${PWD}/bin/
+		rm -rf ${PWD}/bin/minishift-${MINISHIFT_VERSION:1}-linux-amd64/
+		chmod +x ${PWD}/bin/minishift
+	fi
+}
+
 
 case "$OSTYPE" in
   linux*)
@@ -118,9 +131,15 @@ case "$OSTYPE" in
   	download_kubens
   	download_kubespy
 	
-	if [ ${MINIKUBE_INCLUDED} ]
+	if ${MINIKUBE_INCLUDED}
 	then
     	download_minikube
+	fi 
+
+	if ${MINISHIFT_INCLUDED}
+	then
+		echo ${MINISHIFT_INCLUDED}
+    	download_minishift
 	fi   
   	;;
   *) 
