--- a/.envrc
+++ b/.envrc
@@ -14,6 +14,7 @@ KUBENS_VERSION=v0.6.3
 KUBESPY_VERSION=v0.4.0
 MINIKUBE_VERSION=v1.0.0
 MINISHIFT_VERSION=v1.33.0
+HELM_VERSION=v2.13.1
 
 # Minikube configuration
 MINIKUBE_HOME=${PWD}/.minikube
@@ -112,19 +113,27 @@ function download_minishift {
 	if [ ! -f ${PWD}/bin/minishift ]
 	then
 		curl -sL https://github.com/minishift/minishift/releases/download/${MINISHIFT_VERSION}/minishift-${MINISHIFT_VERSION:1}-linux-amd64.tgz | tar xz -C ${PWD}/bin minishift-${MINISHIFT_VERSION:1}-linux-amd64/minishift
-		ls
 		mv ${PWD}/bin/minishift-${MINISHIFT_VERSION:1}-linux-amd64/minishift ${PWD}/bin/
 		rm -rf ${PWD}/bin/minishift-${MINISHIFT_VERSION:1}-linux-amd64/
 		chmod +x ${PWD}/bin/minishift
 	fi
 }
 
+# download helm if does not exist
+function download_helm {
+	if [ ! -f ${PWD}/bin/minishift ]
+	then
+		curl -sL https://storage.googleapis.com/kubernetes-helm/helm-${HELM_VERSION}-linux-amd64.tar.gz | tar xz --strip-components=1 -C ${PWD}/bin 
+		chmod +x ${PWD}/bin/helm
+	fi
+}
 
 case "$OSTYPE" in
   linux*)
   	download_cfssl
   	download_cfssljson
   	download_kubectl
+	download_helm
   	download_kubebox
   	download_kubetail
   	download_kubectx
