--- a/.envrc
+++ b/.envrc
@@ -6,7 +6,6 @@ MINIKUBE_INCLUDED=true
 MINISHIFT_INCLUDED=false
 
 CFSSL_VERSION=R1.2
-KUBERNETES_RELEASE=v1.13.0
 KUBEBOX_VERSION=v0.4.0
 KUBETAIL_VERSION=1.6.7
 KUBECTX_VERSION=v0.6.3
@@ -15,6 +14,8 @@ KUBESPY_VERSION=v0.4.0
 MINIKUBE_VERSION=v1.0.0
 MINISHIFT_VERSION=v1.33.0
 HELM_VERSION=v2.13.1
+
+export KUBERNETES_RELEASE=v1.13.0
 
 # Minikube configuration
 MINIKUBE_HOME=${PWD}/.minikube
