export minikube variables
export minikube configuration variables so it will apply by default.

--- a/.envrc
+++ b/.envrc
@@ -18,9 +18,9 @@ HELM_VERSION=v2.13.1
 export KUBERNETES_RELEASE=v1.14.0
 
 # Minikube configuration
-MINIKUBE_HOME=${PWD}/.minikube
-MINIKUBE_IN_STYLE=false
-MINIKUBE_ENABLE_PROFILING=0
+export MINIKUBE_HOME=${PWD}/.minikube
+export MINIKUBE_IN_STYLE=false
+export MINIKUBE_ENABLE_PROFILING=0
 
 # default kubeconfig location
 export KUBECONFIG=${HOME}/.kube/config
