allow for multiple minikube versions through relative and versioned MINIKUBE_HOME

--- a/.envrc
+++ b/.envrc
@@ -18,7 +18,7 @@ HELM_VERSION=v2.13.1
 export KUBERNETES_RELEASE=v1.14.0
 
 # Minikube configuration
-export MINIKUBE_HOME=${PWD}/.minikube
+export MINIKUBE_HOME=${PWD}/.minikube/${MINISHIFT_VERSION}
 export MINIKUBE_IN_STYLE=false
 export MINIKUBE_ENABLE_PROFILING=0
 
