set vscode as KUBE EDITOR

--- a/.envrc
+++ b/.envrc
@@ -15,6 +15,7 @@ MINIKUBE_VERSION=v1.0.0
 MINISHIFT_VERSION=v1.33.0
 HELM_VERSION=v2.13.1
 
+export KUBE_EDITOR="code -w"
 export KUBERNETES_RELEASE=v1.14.0
 
 # Minikube configuration
