introduce kui tool

--- a/.envrc
+++ b/.envrc
@@ -29,6 +29,14 @@ export KUBECONFIG=${HOME}/.kube/config
 # if /bin not exist create
 mkdir -p ${PWD}/bin
 
+# download kui if does not exist
+function download_kui {
+  	if [ ! -f ${PWD}/kui/bin/kui ] 
+	then
+		curl -sL https://tarball.kui-shell.org | tar jxf -
+  	fi
+}
+
 # download cfssl tools if does not exist
 function download_cfssl {
   	if [ ! -f ${PWD}/bin/cfssl ] 
@@ -141,6 +149,7 @@ case "$OSTYPE" in
   	download_kubectx
   	download_kubens
   	download_kubespy
+	download_kui
 	
 	if ${MINIKUBE_INCLUDED}
 	then
@@ -159,5 +168,5 @@ case "$OSTYPE" in
 esac
 
 # set env PATH
-export PATH="${PATH}:${PWD}/bin"
+export PATH="${PATH}:${PWD}/bin:${PWD}/kui/bin"
 
