--- a/.envrc
+++ b/.envrc
@@ -14,6 +14,7 @@ KUBESPY_VERSION=v0.4.0
 MINIKUBE_VERSION=v1.0.0
 MINISHIFT_VERSION=v1.33.0
 HELM_VERSION=v2.13.1
+STERN_VERSION=1.10.0
 
 export KUBE_EDITOR="code -w"
 export KUBERNETES_RELEASE=v1.14.0
@@ -28,6 +29,15 @@ export KUBECONFIG=${HOME}/.kube/config
 
 # if /bin not exist create
 mkdir -p ${PWD}/bin
+
+# download stern if does not exist
+function download_stern {
+  	if [ ! -f ${PWD}/bin/stern ] 
+	then
+		curl -sLo ${PWD}/bin/stern https://github.com/wercker/stern/releases/download/${STERN_VERSION}/stern_linux_amd64
+		chmod +x ${PWD}/bin/stern
+	fi
+}
 
 # download kui if does not exist
 function download_kui {
@@ -113,6 +123,7 @@ function download_kubespy {
 function download_minikube {
 	if [ ! -f ${PWD}/bin/minikube ]
 	then
+	    echo "a"
 		curl -sLo ${PWD}/bin/minikube https://storage.googleapis.com/minikube/releases/${MINIKUBE_VERSION}/minikube-linux-amd64
 		chmod +x ${PWD}/bin/minikube
 	fi
@@ -150,6 +161,7 @@ case "$OSTYPE" in
   	download_kubens
   	download_kubespy
 	download_kui
+	download_stern
 	
 	if ${MINIKUBE_INCLUDED}
 	then
