add skaffold to facilitate continuous development for Kubernetes applications

--- a/.envrc
+++ b/.envrc
@@ -15,6 +15,7 @@ MINIKUBE_VERSION=v1.0.0
 MINISHIFT_VERSION=v1.33.0
 HELM_VERSION=v2.13.1
 STERN_VERSION=1.10.0	
+SKAFFOLD_VERSION=v0.33.0
 
 export KUBE_EDITOR="code -w"
 export KUBERNETES_RELEASE=v1.14.0
@@ -148,12 +149,22 @@ function download_helm {
 	fi
 }
 
+# download skaffold if does not exist
+function download_skaffold {
+	if [ ! -f ${PWD}/bin/skaffold ]
+	then
+		curl -sLo ${PWD}/bin/skaffold https://storage.googleapis.com/skaffold/releases/${SKAFFOLD_VERSION}/skaffold-linux-amd64 
+		chmod +x ${PWD}/bin/skaffold
+	fi
+}
+
 case "$OSTYPE" in
   linux*)
   	download_cfssl
   	download_cfssljson
   	download_kubectl
 	download_helm
+	download_skaffold
   	download_kubebox
   	download_kubetail
   	download_kubectx
