--- a/.envrc
+++ b/.envrc
@@ -142,7 +142,7 @@ function download_minishift {
 
 # download helm if does not exist
 function download_helm {
-	if [ ! -f ${PWD}/bin/minishift ]
+	if [ ! -f ${PWD}/bin/helm ]
 	then
 		curl -sL https://storage.googleapis.com/kubernetes-helm/helm-${HELM_VERSION}-linux-amd64.tar.gz | tar xz --strip-components=1 -C ${PWD}/bin 
 		chmod +x ${PWD}/bin/helm
